<?php

namespace App\Models\pkg_rh;

use App\Models\pkg_rh\Personne;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Apprenant extends Personne
{
    use HasFactory;

}
